feat: add some details about Golang basic

--- a/Golang/Golang专题/互斥锁、读写锁、条件变量与原子操作.md
+++ b/Golang/Golang专题/互斥锁、读写锁、条件变量与原子操作.md
@@ -1,5 +1,17 @@
 # 互斥锁、读写锁、条件变量与原子操作
 
+## 并发和并行
+
+1. 多线程程序在单核上运行为并发，同一时间点单任务运行
+2. 多线程程序在多核上运行为并行，多任务在同一时间点运行
+
+## 协程
+
+1. 独立栈空间
+2. 共享堆空间
+3. 调度由用户控制
+4. 轻量级线程
+
 ## 互斥锁
 
 竞态条件`race condition`是指数据被多个线程共享，产生争用和冲突，往往会破坏共享数据的一致性。
@@ -11,6 +23,7 @@ package main
 
 import (
 	"sync"
+	"runtime"
 )
 
 var mtx sync.Mutex
@@ -40,6 +53,7 @@ package main
 
 import (
 	"sync"
+	"runtime"
 )
 
 var (
@@ -48,6 +62,10 @@ var (
 )
 
 func main() {
+	// 获取当前系统CPU数
+	cpuNum := runtime.NumCPU()
+	runtime.GOMAXPROCS(cpuNum)
+
 	// 条件变量基于互斥锁，需要一个sync.Locker类型的参数
 	sendCond := sync.NewCond(&lock)
 	recvCond := sync.NewCond(lock.RLocker())
