--- a/Golang/Golang基础/函数.md
+++ b/Golang/Golang基础/函数.md
@@ -1,6 +1,8 @@
 # 函数
 
 将可重用代码进行封装。
+函数的默认值传递，即传参数副本，函数内改动不影响原值。
+每个源文件中都可包含一个`init`函数，将会在`main`函数执行前被调用。全局变量定义在`init`函数之前执行。
 
 ```go
 package main
@@ -36,6 +38,7 @@ func sum(num int, args ...int) int {
 }
 
 // 递归函数
+// 每执行一个函数，就创建一个新的受保护独立空间(新函数栈)。谁调用就把结果返回给谁
 // 要有终止量和渐变量
 func factorial(num int) int {
 	if num == 1 {
@@ -48,3 +51,31 @@ func factorial(num int) int {
 ## 作用域
 
 定义在函数外部的变量就是全局变量，函数内部的即是局部变量。同名局部变量会屏蔽全局变量，所以要尽可能避免重名。
+
+## 闭包
+
+闭包`Closure`是一个函数和与其相关的引用环境组合而成的一个实体。
+
+```go
+package main
+
+import (
+	"fmt"
+)
+
+func main() {
+	fn := closure()
+	fmt.Println(fn(1))
+	fmt.Println(fn(1))
+	fmt.Println(fn(1))
+}
+
+func closure() func(int) int {
+	n := 0
+	// 返回出来的函数与它所引用到的变量共同形成闭包
+	return func(x int) int {
+		n += x
+		return n
+	}
+}
+```
