--- a/Golang/Golang基础/变量、常量、类型与运算符.md
+++ b/Golang/Golang基础/变量、常量、类型与运算符.md
@@ -19,8 +19,10 @@ type boolean bool
 // 计算机将内存分成不同区域，数据存储其中，通过内存地址可以操作数据
 // 变量用来表示数据，减少变量定义，可以降低内存占用
 // 显式声明
+// 仅声明不赋值，将初始化为零值
 var val int
 
+// 多变量声明
 // 常量赋值
 const (
 	C = 10
@@ -54,9 +56,9 @@ func main() {
 
 	/*
 	  1. 算术运算符：+、-、*、/、%(求余)、++(后自加)、--(后自减)
-	  2. 赋值运算符：=、+=、-=、*=、/=、%=
+	  2. 赋值运算符：=、+=、-=、*=、/=、%=、<<=、>>=、&=、^=、|=
 	  3. 关系运算符：==、!=、<、>、<=、>=
-	  4. 逻辑运算符：!、&&、||
+	  4. 逻辑运算符：!、&&(短路与)、||(短路或)
 	  5. 位运算符：&(按位与)、|(按位或)、^(取反、按位异或，不同取1，相同取0)、&^(如果第二个数某位为1，则修改第一位数对应位为0，然后再按位与)、<<、>>
 	  6. 其他运算符：&(取地址符)、*(取值符)
 	*/
@@ -67,6 +69,11 @@ func main() {
 		"20",
 		"30",
 	}
+	// 返回格式化字符串
+	fmt.Sprintf("%#v", strArr[0])
+
+	// 计数
+	strings.Count(strArr[0], "1")
 	// 包含
 	strings.Contains(strArr[0], "a")
 	// 拼接
@@ -81,23 +88,38 @@ func main() {
 	strings.Split(strArr[0], "")
 	// 去头尾
 	strings.Trim(strArr[0], "0")
+	strings.TrimLeft(strArr[0], "0")
+	strings.TrimRight(strArr[0], "0")
+	strings.TrimSpace(strArr[0])
 	// 按空分割
 	strings.Fields(strArr[0])
+	// 不区分大小写比较
+	strings.EqualFold(strArr[0], strArr[1])
+	// 判断字符串前缀
+	strings.HasPrefix(strArr[0], "1")
+	// 判断字符串尾缀
+	strings.HasSuffix(strArr[0], "0")
 
 	// 转化为字符串
 	strconv.FormatBool(false)
 	// f是打印格式以小数形式，保留n位，64是以float64处理
 	strconv.FormatFloat(1.2, 'f', 3, 64)
+	// 返回对应的二进制字符串
+	strconv.FormatInt(123, 2)
 	strconv.Itoa(100)
+	string([]byte{97, 99})
 
 	// 转化成其它类型
 	strconv.ParseBool(strArr[0])
 	strconv.ParseFloat(strArr[0], 64)
+	strconv.Atoi(strArr[0])
 
 	slice := make([]byte, 0)
 	// 添加至字节数组
 	strconv.AppendBool(slice, true)
 	strconv.AppendQuote(slice, "")
+
+	strings.ToLower("Go")
 }
 ```
 
@@ -111,10 +133,14 @@ func main() {
 
 ## 数据类型
 
+`unsafe.Sizeof`方法查看变量所占空间。
+`bit`是最小存储单元，`byte`是基本存储单元，$1byte=8bit1
+`E`：科学计数法
+
 1. 布尔：`bool`占 1 字节
 2. 整型：`int`、`uint`占 1 字节、`int8`、`uint8`(`byte`)占 1 字节、`int16`、`uint16`占 2 字节、`int32`(`rune`)、`uint32`占 4 字节、`int64`、`uint64`占 8 字节，精确位数$2^n$，`unsign`为无符号
-3. 浮点型：`float32`占 4 字节、`float64`占 8 字节
-4. 字符串：`string`
+3. 浮点型：`float32`占 4 字节、`float64`占 8 字节，浮点型有符号
+4. 字符串：`string`，字符串不可变
 5. 复数类型：`complex64`(32 位实数+32 位虚数)、`complex128`(64 位实数+64 位虚数)
 6. 指针：`uintptr`
 
@@ -124,8 +150,10 @@ func main() {
 
 1. \n：换行
 2. \t：`Tab`位
+3. 反引号：原生输出
 
 ### 字符和字符串
 
 1. 字符单引号
 2. 字符串隐藏结束符`\0`
+3. 字符串底层是个字节数组，要改写需转换成字节数组改动后再转回来
