--- a/Golang/Golang基础/复合类型.md
+++ b/Golang/Golang基础/复合类型.md
@@ -14,6 +14,8 @@ type Student struct {
 
 func main() {
 	// 数组是一系列同类型数据集合
+	// 元素紧密排列，首位元素地址即数组首地址，元素地址间隔根据类型决定
+	// 数组长度是其属性之一
 	arr := [5]int{4, 3, 2, 5, 1}
 	for _, v := range bubbleSort(arr) {
 		fmt.Println(v)
@@ -26,10 +28,11 @@ func main() {
 	copy(slice, arr[:5:5])
 	fmt.Println(slice)
 
-	// 字典
+	// 字典，默认无序
 	// make只适用于内置数据结构，即map、channel和slice，返回带有非零初值的类型本身。new适用于所有，返回指针
 	dict := make(map[string]int, 3)
 	dict["one"] = 1
+	len(dict)
 	delete(dict, "one")
 
 	student := Student{
@@ -40,6 +43,7 @@ func main() {
 	student.learn()
 }
 
+// 栈中存放变量，堆中存放引用对象
 // 指针用来存储任何一个变量的内存地址
 // 不要操作没有合法执行的内存
 func (s *Student) learn() {
@@ -62,7 +66,7 @@ func bubbleSort(arr [5]int) [5]int {
 
 // 切片删除
 func sliceDelete(slice []int, startIndex, endIndex int) []int {
-	// append是将后者往前者增加
+	// append是将后者往前者增加，本质是对数组的扩容
 	return append(slice[:startIndex], slice[endIndex:]...)
 }
 
