--- a/Golang/Golang基础/异常处理.md
+++ b/Golang/Golang基础/异常处理.md
@@ -21,7 +21,8 @@ func main() {
 		panic(err)
 	}
 
-	// 延迟运行，执行顺序从下至上
+	// 延迟运行，执行顺序从下至上，因为压栈是个FILO队列
+	// 为了在函数执行完毕后能及时地释放资源
 	defer func() {
 		// 拦截错误，防止崩溃
 		recover()
@@ -29,5 +30,4 @@ func main() {
 		file.Close()
 	}()
 }
-
 ```
