--- a/Golang/Golang基础/文件处理.md
+++ b/Golang/Golang基础/文件处理.md
@@ -8,12 +8,23 @@ import (
 	"fmt"
 	"io"
 	"os"
+	"io/ioutil"
 )
 
 func main() {
 	filePath := "demo.txt"
 	createFile(filePath)
 
+	file, _ := os.OpenFile(filePath, os.O_WRONLY | os.O_APPEND, 0666)
+	defer file.Close()
+
+	writer := bufio.NewWriter(file)
+	writer.WriteString("Halo")
+	// writer是带缓存的，调用方法时，其实是先写入缓存，所以需要调用Flush方法，将数据写入到文件中
+	writer.Flush()
+
+	data, _ := ioutil.ReadFile(filePath)
+	fmt.Println(data)
 }
 
 func createFile(filePath string) {
@@ -41,7 +52,7 @@ func readFile(filePath string) {
 	defer f.Close()
 	buffer := make([]byte, 2*1024)
 	length, err := f.Read(buffer)
-	if err != nil && err != io.EOF {
+	if err != nil && err == io.EOF {
 		return
 	}
 	fmt.Println(string(buffer[:length]))
@@ -59,5 +70,35 @@ func readLines(filePath string) {
 		fmt.Println(string(buffer))
 	}
 	defer f.Close()
+}
+
+func pathExists(filePath string) (bool, error) {
+	_, err := os.Stat(filePath)
+	if err == nil {
+		return true, nil
+	}
+	if os.IsNotExist(err) {
+		return false, nil
+	}
+	return false, nil
+}
+```
+
+## os.Args 和 flag 包
+
+`os.Args`用于记录命令行参数的字符串数组。`flag`包用来解析命令行参数。
+
+```go
+package main
+
+import "flag"
+
+// 定义变量用于接收命令行参数值
+var port int
+
+func main() {
+	flag.IntVar(&port, "port", 3306, "端口号")
+	// 转换
+	flag.Parse()
 }
 ```
