--- a/Golang/Golang基础/面向对象.md
+++ b/Golang/Golang基础/面向对象.md
@@ -2,17 +2,20 @@
 
 面向过程强调步骤过程。尽量在程序内减少匿名组合，否则会增加复杂度。
 `Go`语言中没有继承、重载(方法名一致，参数类型或个数不一致)。
+封装(`encapsulation`)，将抽象出来的字段和对字段的从左封装在一起，数据被保护在内部，程序的其他包只有通过被授权的操作，即方法，才可以对字段进行操作。封装可以隐藏实现细节，对数据进行验证以确保安全合理。
 
 ```go
 package main
 
 import (
+	// JavaScript Object Notation，在网络传输中，程序将对象序列化成JSON字符串，接收方将JSON字符串反序列化成对象。
+	"encoding/json"
 	"fmt"
 )
 
+// 结构体的所有字段在内存中是连续的
 type Person struct {
-	name string
-	eat  func(string)
+	name string `json:"name"` // tag可以通过反射机制获取，常用于序列化和反序列化
 }
 
 type Student struct {
@@ -36,13 +39,26 @@ type Teacher interface {
 var (
 	t       Teacher
 	teacher Mentor
+	p       Person
 )
 
 func main() {
+	human := Person{
+		"human",
+	}
+	// 序列化
+	jsonStr, _ := json.Marshal(&human)
+	fmt.Println(string(jsonStr))
+
+	// 反序列化
+	err := json.Unmarshal(jsonStr, &p)
+	if err != nil {
+		fmt.Println(err)
+	}
+
 	student := Student{
 		Person: Person{
 			name: "Lili",
-			eat:  demo,
 		},
 		learn: demo,
 	}
