build: add plugins

--- a/Golang/Golang专题/关于测试.md
+++ b/Golang/Golang专题/关于测试.md
@@ -8,14 +8,10 @@
 
 ## go test 命令
 
-```bash
-# go test对测试成功的结果会进行缓存
-# 清除测试缓存
-go clean -testcache
-# 清理全部缓存
-go clean -cache
-
-go test -parallel 10 demo -v # -parallel是指定最大并发数，对性能测试无效，-v是输出所有常规测试日志
+```term
+$ go clean -testcache # 清除测试缓存，go test对测试成功的结果会进行缓存
+$ go clean -cache # 清理全部缓存
+$ go test -parallel 10 demo -v # -parallel是指定最大并发数，对性能测试无效，-v是输出所有常规测试日志
 ```
 
 ```go
@@ -33,12 +29,8 @@ func TestDemo(t *testing.T){
 
 ## 执行性能测试
 
-```bash
-# -bench=.表示执行所有基准测试函数
-# -run=^$表示不执行功能测试函数
-# -cpu代表可以同时运行goroutine的逻辑CPU的最大个数
-# -count代表重复执行测试函数数
-go test -bench=. -run=^$ -cpu=[8, 6] -count 5 demo
+```term
+$ go test -bench=. -run=^$ -cpu=[8, 6] -count 5 demo # -bench=.表示执行所有基准测试函数，-run=^$表示不执行功能测试函数，-cpu代表可以同时运行goroutine的逻辑CPU的最大个数，-count代表重复执行测试函数数
 ```
 
 $$
