--- a/Golang/Golang专题/开发环境配置与程序实体.md
+++ b/Golang/Golang专题/开发环境配置与程序实体.md
@@ -14,11 +14,11 @@
 
 `go get`是从代码仓库中拉取代码包并放入`GOBIN`目录中
 
-```bash
-go get -u -t github.com/astaxie/beego # -u是下载并安装代码包，不管工作区中是否存在，-t是同时下载测试所需代码包
-go get -d github.com/gin-gonic/gin # 只下载代码包
-go get -fix github.com/kataras/iris # 下载后先运行根据当前版本修正代码的工具，再安装
-go get -insecure github.com/smartystreets/goconvey # 允许使用非安全协议，如http
+```term
+$ go get -u -t github.com/astaxie/beego # -u是下载并安装代码包，不管工作区中是否存在，-t是同时下载测试所需代码包
+$ go get -d github.com/gin-gonic/gin # 只下载代码包
+$ go get -fix github.com/kataras/iris # 下载后先运行根据当前版本修正代码的工具，再安装
+$ go get -insecure github.com/smartystreets/goconvey # 允许使用非安全协议，如http
 ```
 
 ## 什么是程序实体？
