--- a/Golang/Golang基础/变量、常量、类型与运算符.md
+++ b/Golang/Golang基础/变量、常量、类型与运算符.md
@@ -134,7 +134,7 @@ func main() {
 ## 数据类型
 
 `unsafe.Sizeof`方法查看变量所占空间。
-`bit`是最小存储单元，`byte`是基本存储单元，$1byte=8bit1
+`bit`是最小存储单元，`byte`是基本存储单元，$1byte=8bit$
 `E`：科学计数法
 
 1. 布尔：`bool`占 1 字节
